flux/vicinity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vicinity-svc
  namespace: vicinity
spec:
  type: ClusterIP
  selector:
    app: vicinity
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
